# interactive_segmentation_textured_groovy

./: CMakeLists.txt  LICENSE  README.md  README.md~  manifest.xml
include/.svn/: all-wcprops  entries
include/interactive_segmentation_textured/.svn/: all-wcprops  entries
launch/: camera_self_filter_server_kinect_head.launch  camera_self_filter_server_prosilica.launch  pr2_int_segm.launch  prosilica.launch
launch/.svn/: all-wcprops  entries
launch/.svn/text-base/: camera_self_filter_kinect_head.launch.svn-base  openCV_to_ros.launch.svn-base  pr2_int_segm_without_arms.launch.svn-base
src/: Timer.h  c_track_features.cpp  c_track_features_3d.cpp  c_track_features_with_grasping.cpp  c_track_features_with_grasping.cpp~  compute_icp_server.cpp  find_corners.py  find_poke_point.cpp  find_poke_point.cpp~  my_client.cpp  push_evaluator.cpp  test_client.cpp  track_features_lk_class.py  transform_depth_image.cpp  transform_depth_image.cpp~
src/.svn/: all-wcprops  entries
src/.svn/text-base/: c_track_features.cpp.svn-base  c_track_features_3d.cpp.svn-base  c_track_features_with_grasping.cpp.svn-base  execute_grasps.py.svn-base  find_poke_point.cpp.svn-base  roi_pcl_filter.h.svn-base  test_client.cpp.svn-base  transform_depth_image.cpp.svn-base
src/interactive_segmentation_textured/srv/: __init__.py  _computeICP.py  _cornerFind.py  _cornerPokePoseFind.py  _depthImage.py  _estimateRigid.py
src/interactive_segmentation_textured_groovy/srv/: _computeICP.py  _cornerFind.py  _cornerPokePoseFind.py  _depthImage.py  _estimateRigid.py
srv/: cornerFind.srv  cornerPokePoseFind.srv  depthImage.srv  estimateRigid.srv
srv/.svn/: all-wcprops  entries
srv_gen/lisp/: _package.lisp  _package_computeICP.lisp  _package_cornerFind.lisp  _package_cornerPokePoseFind.lisp  _package_depthImage.lisp  _package_estimateRigid.lisp  computeICP.lisp  cornerFind.lisp  cornerPokePoseFind.lisp  depthImage.lisp  estimateRigid.lisp  interactive_segmentation_textured-srv.asd
tools/: bag_to_images.py
tools/.svn/: all-wcprops  entries
(+11 files in other folders)
